scrollbar-backround photo solved
resized as png screenshot, replaced a div id# with a div class. to fix two columns problem.

--- a/resume_final/resume_stylesheet.css
+++ b/resume_final/resume_stylesheet.css
@@ -1,16 +1,21 @@
 
 
 *{
-margin: 0;
+margin: 0 auto;
 padding-left: 15px;
     box-sizing: border-box;
     max-width: 1200px;
 }
 
-#navbar {
+#navbar{
     position: fixed;
     width: 100%;
-    background-color: #36366B;
+    color: #fff !important;
+    background-color: #36366B !important;
+}
+
+#navbar a{
+    color: #fff !important;
 }
 
 .container-fluid{
@@ -20,7 +25,7 @@ padding-left: 15px;
 
 .hero {
   margin: -1rem -1rem 1rem;
-  height: 100svh;
+  height: 50svh;
   color: white;
   font-weight: 900;
   font-size: 3em;
@@ -54,7 +59,7 @@ h1{
     color: #fff;
     font-size: 36px;
     font-weight: 300;
-    font-family: "Raleway", "Helvetica", "sans serif";
+    font-family: "Raleway", "Helvetica", "sans serif";}
 
 img {
     border-radius: 50%;
@@ -83,22 +88,21 @@ img {
 }
     
 .col-8 {
-background-image: url(downloaded/vecteezy_microphone-headphone-book-and-paper-note-on-brown-wooden_6306211.JPG);           size: 100%
-    color: #fff;
+background-image: url(downloaded/4.png);           
+size: fill;
+color: #fff;
+    
 }
 
 #languages {
     padding-bottom: 60px;
 }
 
-.fixed-bottom{
-    background-image: url(downloaded/vecteezy_microphone-headphone-book-and-paper-note-on-brown-wooden_6306211.JPG);           
-    size: 100%
-    color: #fff; 
-    width: 100%;
+.bottom {
+    color: #fff;
     line-height: 50px;
-    background-color: #FFF;
-    color: black;
+    background-color: #36366B !important;
+    color: #fff;
     font-size: 22px;
 }
 
